# RAG_pipeline

./: .dockerignore  .env.example  .gitignore  Procfile  README.md  chainlit.md  chainlit_app.py  pyproject.toml  render.yaml  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
scr/: __init__.py  __main__.py  agent.py  app.py  config.py  embeddings.py  llm.py  loader.py  main.py  pipeline.py  query_rewriter.py  retriever.py  splitter.py  vector_store.py
scr/api/: routes.py  schemas.py
scr/services/: pipeline_service.py
scr/tools/: __init__.py  rag_tool.py
