[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Chainlit-based PDF RAG app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.0.0",
    "chromadb",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-groq",
    "langchain-text-splitters>=1.1.1",
    "numpy",
    "pywebview>=5.0",
    "pypdf",
    "python-dotenv",
    "sentence-transformers",
]

[project.scripts]
rag-desktop = "desktop_launcher:main"
